Replace 'new Integer/Double/Long' by Integer/Double/Long.valueOf - as the constructor is deprecated since Java 9